<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/monParcours"
        android:layout_width="408dp"
        android:layout_height="63dp"
        android:layout_marginTop="52dp"
        android:text="@string/parcours"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/parcours_final"
        android:layout_width="408dp"
        android:layout_height="439dp"
        android:layout_marginTop="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monParcours"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="gone" />

    <Button
        android:id="@+id/reinitialiser_button"
        android:layout_width="136dp"
        android:layout_height="57dp"
        android:text="@string/reinitialiser"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monParcours"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/parcours_vide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parcoursvide"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reinitialiser_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>