<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:id="@+id/drawerLayout"
    android:theme="@style/AppTheme.NoActionBar">


    <Button
        android:id="@+id/BoutonSemestre"
        style="@android:style/Widget.Material.Button"
        android:layout_width="412dp"
        android:layout_height="100dp"
        android:fontFamily="serif"
        android:text="@string/semestre"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/accordeonsPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2in"
        android:text="@string/deroulementPlus"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/BoutonSemestre"
        app:layout_constraintEnd_toEndOf="@+id/BoutonSemestre"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="@+id/BoutonSemestre"
        app:layout_constraintTop_toTopOf="@+id/BoutonSemestre" />

    <TextView
        android:id="@+id/emplacement2S1"
        android:layout_width="390dp"
        android:layout_height="48dp"
        android:background="#D6D7D7"
        android:text="@string/emplacement2S1"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/emplacement1S1"
        android:layout_width="390dp"
        android:layout_height="46dp"
        android:background="#D6D7D7"
        android:text="@string/emplacement1S1"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        />

    <CheckBox
        android:id="@+id/checkBoxEmplacement1"
        android:layout_width="34dp"
        android:layout_height="46dp"
        android:layout_marginEnd="52dp"
        android:buttonTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/emplacement1S1"
        app:layout_constraintEnd_toEndOf="@+id/emplacement1S1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emplacement1S1"
        app:layout_constraintVertical_bias="0.79" />

    <CheckBox
        android:id="@+id/checkBoxEmplacement2"
        android:layout_width="34dp"
        android:layout_height="46dp"
        android:buttonTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/emplacement2S1"
        app:layout_constraintEnd_toEndOf="@+id/emplacement2S1"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="@+id/emplacement2S1"
        app:layout_constraintTop_toTopOf="@+id/emplacement2S1"
        app:layout_constraintVertical_bias="0.0"
        />


    <Button
        android:id="@+id/Enregistrer"
        android:layout_width="195dp"
        android:layout_height="57dp"
        android:layout_marginBottom="44dp"
        android:text="@string/Enregistrer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941"
        />

    <Button
        android:id="@+id/parcours_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/parcours"
        app:layout_constraintBottom_toTopOf="@+id/BoutonSemestre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>