<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Portail" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_parcours"
            android:title="@string/parcours" />


        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_search"
            android:title="@string/recherche" />
                <item
                    android:id="@+id/nav_tools"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:title="@string/menu_tools" />
    </group>

    <!--    <item android:title="Communicate">-->
    <!--        <menu>-->
    <!--            <item-->
    <!--                android:id="@+id/nav_share"-->
    <!--                android:icon="@drawable/ic_menu_share"-->
    <!--                android:title="@string/menu_share" />-->
    <!--            <item-->
    <!--                android:id="@+id/nav_send"-->
    <!--                android:icon="@drawable/ic_menu_send"-->
    <!--                android:title="@string/menu_send" />-->
    <!--        </menu>-->
    <!--    </item>-->

</menu>
